PostBook does not accept duplicates anymore
